--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
     "extends": "airbnb",
     "rules":{
         "linebreak-style": 0,
-        "no-undef": 0
+        "no-undef": 0,
+        "no-unused-vars": 0
     }
 }
