--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,8 @@
     "rules":{
         "linebreak-style": 0,
         "no-undef": 0,
-        "no-unused-vars": 0
+        "no-unused-vars": 0,
+        "no-param-reassign": 0,
+        "no-use-before-define": 0
     }
 }
