--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "dev": "http-server -c-1 ./ -p 3000"
   },
   "repository": {
