--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,12 @@
         "no-undef": 0,
         "no-unused-vars": 0,
         "no-param-reassign": 0,
-        "no-use-before-define": 0
+        "no-use-before-define": 0,
+        "no-underscore-dangle": [
+            "error", 
+            {
+                "allowAfterThis": true
+            }
+        ]
     }
 }
