--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,11 +6,6 @@
         "no-unused-vars": 0,
         "no-param-reassign": 0,
         "no-use-before-define": 0,
-        "no-underscore-dangle": [
-            "error", 
-            {
-                "allowAfterThis": true
-            }
-        ]
+        "no-underscore-dangle": 0
     }
 }
