--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,16 @@
 {
     "extends": "airbnb",
-    "rules":{
+    "rules": {
         "linebreak-style": 0,
         "no-undef": 0,
         "no-unused-vars": 0,
         "no-param-reassign": 0,
         "no-use-before-define": 0,
         "no-underscore-dangle": 0
+    },
+    "settings": {
+        "react": {
+            "version": "999.999.999"
+        }
     }
 }
