--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "dev": "http-server -c-1 ./ -p 3000"
+    "dev": "http-server -c-1 ./ -p 3000",
+    "start": "npx http-server -c-1 ./ -p $PORT"
   },
   "repository": {
     "type": "git",
